--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=schedule-management
 
-spring.datasource.url=jdbc:mysql://localhost:3306/board
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,4 +11,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#db??? ??
+spring.jpa.open-in-view=false
+
+
+# ??????? ???? ?? ?? ?? ?? ? ?? ??
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
