feat : Add CustomException in filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,15 @@ spring.jpa.open-in-view=false
 
 # ??????? ???? ?? ?? ?? ?? ? ?? ??
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+# Swagger
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.cors=true
+
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
